--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -99,16 +99,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e02"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e02a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e02b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -131,21 +131,21 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e03"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e03a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3e03a" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e03b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3e03b" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e03c"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3e03c" />
 
                             </RadioGroup>
@@ -302,16 +302,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e07"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e07a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e07b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -333,16 +333,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e08"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e08a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e08b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -378,16 +378,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e09"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e09a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e09b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -423,16 +423,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e10"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e10a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e10b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -454,16 +454,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e11"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e11a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e11b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -555,16 +555,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e13"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e13a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e13b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -592,16 +592,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e14"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e14a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e14b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
 
                                 </RadioGroup>
@@ -623,16 +623,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e15"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e15a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e15b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
 
                                 </RadioGroup>
@@ -654,16 +654,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e16"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e16a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e16b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
 
                                 </RadioGroup>
@@ -685,16 +685,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e17"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e17a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e17b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
 
                                 </RadioGroup>
@@ -733,16 +733,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e18"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e18a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e18b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -778,16 +778,16 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3e19"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3e19a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/yes" />
 
                                 <RadioButton
                                     android:id="@+id/kf3e19b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/no" />
 
                             </RadioGroup>
@@ -815,16 +815,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e20"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e20a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e20b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
 
                                 </RadioGroup>
@@ -847,16 +847,16 @@
 
                                 <RadioGroup
                                     android:id="@+id/kf3e21"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3e21a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/yes" />
 
                                     <RadioButton
                                         android:id="@+id/kf3e21b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/no" />
                                 </RadioGroup>
                             </LinearLayout>
